Corrijo rutas de estilos y scripts para GitHub Pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro de Inasistencias</title>
-  <link rel="stylesheet" href="/styles.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Registro de Inasistencias</h1>
@@ -92,6 +92,6 @@
     <button id="eliminarTodo" class="limpiar-btn">Eliminar todas las inasistencias</button>
   </section>
 
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
